--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,3 +8,6 @@ bind - split-window -v
 
 bind -n M-Left previous-window
 bind -n M-Right next-window
+
+set-window-option -g status-style bg=colour29
+set-window-option -g window-status-current-style bg=colour36
