Add reorder windows hotkeys in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,5 +9,8 @@ bind - split-window -v
 bind -n M-Left previous-window
 bind -n M-Right next-window
 
+bind -n M-C-Left swap-window -t -1\; previous-window
+bind -n M-C-Right swap-window -t +1\; next-window
+
 set-window-option -g status-style bg=colour29
 set-window-option -g window-status-current-style bg=colour36
