--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@ set -g mouse on
 
 unbind '"'
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 bind -n M-Left previous-window
 bind -n M-Right next-window
